# Convex-Hulls

./: AHall.cpp  AHall.h  CMakeLists.txt  DatasetGenerator.cpp  DatasetGenerator.h  GrahamScan.cpp  GrahamScan.h  Jarvis.cpp  Jarvis.h  MonotoneChain.cpp  MonotoneChain.h  Point.cpp  Point.h  README.md  Randomizer.cpp  Randomizer.h  Timer.cpp  Timer.h  create_dataset.cpp  drawAHall.cpp  evalAHall.cpp  evalAHallParallel.cpp  evalGrahamScan.cpp  evalJarvis.cpp  evalMonotoneChain.cpp  util.cpp  util.h
